# zscripts

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  EXEC_PLAN.md  EXEC_PLAN_ADAPTIVE_PERFECTION.md  Makefile  PERFECTION_PLAN.md  PROJECT_STATUS_REPORT.md  README.md  REPORT.md  bad_config.json  config.py  noxfile.py  pyproject.toml  requirements.txt  test_output.txt  tree_output.txt  zscripts.config.json
.agent/: AGENTS.md  PLANS.md
.agent/execplans/: ExecPlan.md
.github/: copilot-instructions.md
example/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
example/templates/example/: example.html  example_confirm_delete.html  example_form.html
sample_project/backend/: models.py  service.py  views.py
sample_project/frontend/: App.cjs  App.css  App.cts  App.js  App.jsx  App.mjs  App.mts  App.tsx
sample_project/infra/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  nginx.conf  pipeline.yaml
sample_project/scripts/: build.sh  deploy.sh  manage_db.py
sample_project/zscripts_logs/logs_apps_all/: backend.txt  frontend.txt  scripts.txt
sample_project/zscripts_logs/logs_apps_pyth/: backend.txt  scripts.txt
tests/: __init__.py  conftest.py  test_cli.py  test_cli_integration.py  test_config.py  test_config_advanced.py  test_legacy_wrappers.py  test_security.py  test_utils.py
tests/tmp-case/: config.json
tests/tmp-case2/: config.json
zscripts/: __init__.py  __main__.py  cli.py  config.json  config.py  utils.py
zscripts/all/: all_both.py  all_cssss.py  all_htmlll.py  all_jssss.py  all_pyth.py  app_all_types.py
zscripts/all_single/: single.py  single_css.py  single_html.py  single_js.py  single_pyth.py
zscripts/by_file/: by_file_name.py  zby_file_name_analysis.py
zscripts/create/: create_tree.py
zscripts/logs/logs_apps_all/: backend.txt  frontend.txt
zscripts/logs/logs_apps_both/: backend.txt  root.txt
zscripts/logs/logs_apps_css/: frontend.txt
zscripts/logs/logs_apps_js/: frontend.txt
zscripts/logs/logs_apps_pyth/: backend.txt  example.txt  scripts.txt  zscripts.txt
zscripts/logs/logs_single_files/: capture_all.txt  capture_all_css.txt  capture_all_js.txt  capture_all_pyth.txt  sample_tree.txt
zscripts/make/: analysis.py  build.py  consoli.py
zscripts/todo/: log.txt  todo.md  todo.py
zscripts/zreadme/: 0-Overview.txt  1-Configuration.txt  2-CLI.txt  3-Sample-Project.txt  4-Migration.txt  readme_build.py
zscripts_logs/logs_apps_pyth/: root.txt  sample_project.txt  tests.txt
