[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zscripts"
version = "0.2.0"
description = "Toolkit for aggregating source files into navigable log bundles"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Zscripts Maintainers"}
]
keywords = ["logs", "tooling", "documentation", "automation"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Build Tools",
]
dependencies = []

[project.scripts]
zscripts = "zscripts.cli:main"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
filterwarnings = [
  "default::DeprecationWarning:zscripts"
]

[tool.coverage.run]
branch = true
source = ["zscripts"]

[tool.ruff]
line-length = 100

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP", "PL"]
ignore = ["E203", "E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004"]
"zscripts/utils.py" = ["PLR0913"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_any_unimported = true
disallow_any_expr = true
disallow_any_decorated = true
disallow_any_generics = true
enable_error_code = ["ignore-without-code"]
exclude = ["tests/tmp-case", "tests/tmp-case2"]

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true
allow_untyped_calls = true
ignore_missing_imports = true
ignore_errors = true

[[tool.mypy.overrides]]
module = "hypothesis.*"
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests/tmp-case", "tests/tmp-case2"]
